# GameNativeLibrary

./: .gitignore  README.md
detour_cpp/: CMakeLists.txt  Makefile  SoloMesh.cpp  SoloMesh.h  TempObstacle.cpp  TempObstacle.h  com_highfly029_GameNativeLibrary.cpp  com_highfly029_GameNativeLibrary.h  common.h  libGameNativeLibrary.dylib  linuxGenLib.sh  macGenLib.sh  main  main.cpp  makeMaxOS.sh
project_cpp/GameNativeLibrary/: GameNativeLibrary.sln
project_cpp/GameNativeLibrary/GameNativeLibrary/: GameNativeLibrary.cpp  GameNativeLibrary.h  GameNativeLibrary.vcxproj  GameNativeLibrary.vcxproj.filters  NavMesh.cpp  ReadMe.txt  stdafx.cpp
project_cpp/GameNativeLibrary/GameNativeLibrary/x64/Release/GameNati.4E734129.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameNativeLibrary.lastbuildstate  GameNativeLibrary.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
project_cpp/GameNativeLibrary/make/: Makefile  makeMaxOS.sh
project_cpp/GameNativeLibrary/sh/: create_so.sh
project_java/: GameNativeLibrary.h  com_highfly029_GameNativeLibrary.h  genJar.bat  genJar.py  genJarPerfect.py  mvn.bat  pom.xml  testJar.py
project_java/jni/: com_highfly029_GameNativeLibrary.h
project_java/src/main/java/com/highfly029/: GameNativeLibrary.java
project_java/src/main/resources/: libGameNativeLibrary.dylib
